src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwP0.25-dhP0.5-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\ndefault window height: P0.5\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 300 × 336, bounds: 1248 × 688, states: [Activated]
